[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/ubuntu/Ubuntu-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/menu_button/menu_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="center_container"]
margin_left = 312.0
margin_top = 50.0
margin_right = 712.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 500 )

[node name="title" type="Label" parent="center_container/vbox_container"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 161.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Tirando cable"
align = 1
valign = 1

[node name="buttons_container" type="VBoxContainer" parent="center_container/vbox_container"]
margin_top = 270.0
margin_right = 400.0
margin_bottom = 500.0
custom_constants/separation = 10

[node name="play_button" parent="center_container/vbox_container/buttons_container" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 400.0
margin_bottom = 50.0
text = "Jugar"

[node name="play_tutorial_button" parent="center_container/vbox_container/buttons_container" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 60.0
margin_right = 400.0
margin_bottom = 110.0
text = "Jugar tutorial"

[node name="credits_menu" parent="center_container/vbox_container/buttons_container" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 120.0
margin_right = 400.0
margin_bottom = 170.0
text = "Cr√©ditos"

[node name="exit_button" parent="center_container/vbox_container/buttons_container" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 180.0
margin_right = 400.0
margin_bottom = 230.0
text = "Salir del juego"
[connection signal="pressed" from="center_container/vbox_container/buttons_container/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="center_container/vbox_container/buttons_container/play_tutorial_button" to="." method="_on_play_tutorial_button_pressed"]
[connection signal="pressed" from="center_container/vbox_container/buttons_container/credits_menu" to="." method="_on_credits_menu_pressed"]
[connection signal="pressed" from="center_container/vbox_container/buttons_container/exit_button" to="." method="_on_exit_button_pressed"]
